tests/pass/struct_point.jolt
struct Point {
    x: i32;
    y: i32;
}

fn main() i32 {
    let p = Point { x: 3; y: 4 };
    ret p.x + p.y;
}
