tests/fail/enum_field_access.jolt
enum E { A }

fn main() void {
    let x = E::A;
    let y = x.foo;
}
